# brain-tumor-segmentation-fpn-app

./: .gitignore  README.md  pyproject.toml
src/: mapeo_archivos.py  obtencion_datos.py  transformar_datos.py
src/Analisis/: Analisis_imagen.py  Analisis_test.py  Metricas_modelo.py  Script_R_1.R
src/Aplicacion/: cliente.py  streamlit.py
src/Aplicacion/pages/: Ficha_tecnica.py
src/orquestador/: activos.py  horario.py  tareas.py
src/procesamiento_datos/: procesador_dask.py
src/procesamiento_datos/modelo/: caracteristicas.py  entrenar_modelo.py  modelo_fpn.py  modelo_unet.py  segmentar.py
