[project]
name = "local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies =  [
    "bs4>=0.0.2",
    "dask[dataframe,distributed]>=2026.1.2",
    "flyte>=2.0.1",
    "h5py>=3.15.1",
    "ipykernel>=7.1.0",
    "kaggle>=2.0.0",
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "nibabel>=5.3.3",
    "numpy>=2.3.5",
    "opencv-python>=4.13.0.92",
    "openpyxl>=3.1.5",
    "pandas==2.3.3",
    "prefect>=3.6.19",
    "pyarrow>=23.0.0",
    "pyreadstat>=1.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "siuba>=0.4.2",
    "ucimlrepo>=0.0.7",
    "gapminder>=0.1",
    "distributed>=2026.1.2",
    "typing-extensions>=4.15.0",
    "albumentations>=2.0.8",
    "dagster>=1.12.19",
    "asset>=0.6.13",
    "output>=1.0.1",
    "plotly>=6.6.0",
    "dagster-graphql>=1.12.19",
    "dagster-webserver>=1.12.19",
    "torch>=2.11.0",
    "scikit-image>=0.26.0",
    "streamlit>=1.57.0",
]
